Agora o verb funciona

--- a/Aula 1/aula1.tex
+++ b/Aula 1/aula1.tex
@@ -3,6 +3,7 @@
 \usepackage{graphicx}
 \usepackage[brazilian]{babel}
 \usepackage[utf8]{inputenc}
+\usepackage{verbatim}
 \usepackage{listings}
 \usetheme{Warsaw}
 
@@ -21,13 +22,14 @@ Pedro Caetano}
     O que é \LaTeX?
   \end{frame}
 
-  \begin{frame}[fragile]
+\begin{frame}[fragile]
     \frametitle{Comandos}
      Todos os comandos começam com a ``barra invertida'' \textbackslash
      Tipos de comandos:
      \begin{itemize}
-       \item Comandos diretos. \textbf{Ex:}
+       \item Comandos diretos. \textbf{Ex:} \verb+\+
        \item Comandos com entrada.
      \end{itemize}
-  \end{frame}
+\end{frame}
+
 \end{document}
