--- a/Aula 1/aula1.tex
+++ b/Aula 1/aula1.tex
@@ -156,4 +156,11 @@ Pedro Caetano}
 \end{verbatim}
 \end{frame}
 
+\begin{frame}
+  \begin{center}
+    \large Obrigado!\\
+    :)
+  \end{center}
+\end{frame}
+
 \end{document}
