Começo da aula 2

--- a/Aula 1/aula1.tex
+++ b/Aula 1/aula1.tex
@@ -5,12 +5,11 @@
 \usepackage[utf8]{inputenc}
 \usepackage{verbatim}
 \usepackage{hyperref}
-\usetheme{Warsaw}
+\usetheme{Madrid}
 
 \title{Mini-Curso de \LaTeX\ \\ Aula 01 - Introdução}
-\author{Fábio Meneghetti,\\
-Pedro Caetano}
-\date{}
+\author{Fábio Meneghetti \and Pedro Caetano}
+\date{28 de março de 2016}
 
 \begin{document}
 \begin{frame}
@@ -22,6 +21,10 @@ Pedro Caetano}
   \begin{center}
     \includegraphics[scale=0.3]{../license.png}
   \end{center}
+\end{frame}
+
+\begin{frame}
+  \tableofcontents
 \end{frame}
 
 \begin{frame}{Introdução}
@@ -43,6 +46,7 @@ Pedro Caetano}
 \end{frame}
 
 \begin{frame}{Instalação}
+  \section{Instalação}
   \begin{itemize}
     \item Windows: \url{http://miktex.org/}
     \item Mac OS X: \url{https://www.tug.org/mactex/}
@@ -107,7 +111,7 @@ Pedro Caetano}
   Dá informações sobre o tipo de documento que vamos usar.
   \begin{itemize}
     \item A entrada pode ser \underline{article}, beamer, book, report, letter, etc.
-    \item As opções podem ser \underline{12pt}, \underline{a4paper}, notitlepage, twocolumn, landscape, etc.
+    \item As opções podem ser \underline{12pt}, \underline{a4paper}, titlepage, twocolumn, landscape, etc.
   \end{itemize}
 \end{frame}
 
