--- a/Aula 2/Exemplos/ex1.tex
+++ b/Aula 2/Exemplos/ex1.tex
@@ -1,11 +1,10 @@
-\documentclass[12pt, a4paper, titlepage]{article}
+\documentclass[12pt, a4paper]{article}
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath,amsthm,amssymb,amsfonts}
 \usepackage[brazilian]{babel}
 
 \title{Alice no País das Maravilhas}
-\author{Lewis Carroll\\
-\and João}
+\author{Lewis Carroll}
 \date{4 de julho de 1865}
 
 \begin{document}
