--- a/Aula 2/aula2.tex
+++ b/Aula 2/aula2.tex
@@ -61,8 +61,43 @@
   \end{itemize}
 \end{frame}
 
+\begin{frame}[fragile]{Seções}
+  \section{Seções}
+  O \LaTeX\ já enumera as seções e subseções automaticamente.
+  \begin{itemize}
+    \item \verb+\section{}+ Adiciona uma seção com o nome introduzido
+    \item \verb+\subsection{}+ Adiciona uma subseção
+    \item \verb+\subsubsection{}+ Adiciona uma subsubseção
+  \end{itemize}
+  \bigskip
+  Ver Exemplo 2.
+\end{frame}
+
+\begin{frame}[fragile]
+  Para adicionar uma seção ou subseção não-numerada, adicione um asterisco no fim do comando.\\
+  \medskip
+  \textbf{Ex:} \verb+\section*{Introdução}+
+  \medskip
+
+  Tente no Exemplo 2!
+\end{frame}
+
+\begin{frame}[fragile]
+  Para adicionar um sumário, utilize o comando \verb+\tableofcontents+
+  \bigskip
+
+  Tente no Exemplo 2 também!
+\end{frame}
+
 \begin{frame}{Formatação de texto}
   \section{Formatação}
+\end{frame}
+
+\begin{frame}
+  \begin{center}
+    \large Obrigado!\\
+    :)
+  \end{center}
 \end{frame}
 
 \end{document}
