--- a/Aula 2/aula2.tex
+++ b/Aula 2/aula2.tex
@@ -90,7 +90,7 @@
 \end{frame}
 
 \begin{frame}{Formatação de texto}
-  \section{Formatação}
+  \section{Formatação de texto}
 \end{frame}
 
 \begin{frame}
