--- a/Aula 2/aula2.tex
+++ b/Aula 2/aula2.tex
@@ -61,6 +61,15 @@
   \end{itemize}
 \end{frame}
 
+\begin{frame}[fragile]{Resumo (Abstract)}
+  Para adicionar um resumo, basta usar o ambiente abstract:
+  \begin{verbatim}
+    \begin{abstract}
+      ...
+    \end{abstract}
+  \end{verbatim}
+\end{frame}
+
 \begin{frame}[fragile]{Seções}
   \section{Seções}
   O \LaTeX\ já enumera as seções e subseções automaticamente.
