Texto real da Alice

--- a/Aula 2/Exemplos/ex1.tex
+++ b/Aula 2/Exemplos/ex1.tex
@@ -11,6 +11,10 @@
 
   \maketitle
 
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  Alice estava começando a ficar muito cansada de estar sentada ao lado de sua irmã e não ter nada para fazer: uma vez ou duas ela dava uma olhadinha no livro que a irmã lia, mas não havia figuras ou diálogos nele e “para que serve um livro”, pensou Alice, “sem figuras nem diálogos?”
+
+  Então, ela pensava consigo mesma (tão bem quanto era possível naquele dia quente que a deixava sonolenta e estúpida) se o prazer de fazer um colar de margaridas era mais forte do que o esforço de ter de levantar e colher as margaridas, quando subitamente um Coelho Branco com olhos cor-de-rosa passou correndo perto dela.
+
+  Não havia nada de muito especial nisso, também Alice não achou muito fora do normal ouvir o Coelho dizer para si mesmo “Oh puxa! Oh puxa! Eu devo estar muito atrasado!” (quando ela pensou nisso depois, ocorreu-lhe que deveria ter achado estranho, mas na hora tudo parecia muito natural); mas, quando o Coelho tirou um relógio do bolso do colete, e olhou para ele, apressando-se a seguir, Alice pôs-se em pé e lhe passou a idéia pela mente como um relâmpago, que ela nunca vira antes um coelho com um bolso no colete e menos ainda com um relógio para tirar dele. Ardendo de curiosidade, ela correu pelo campo atrás dele, a tempo de vê-lo saltar para dentro de uma grande toca de coelho embaixo da cerca.
 
 \end{document}
