--- a/Aula 3/aula3.tex
+++ b/Aula 3/aula3.tex
@@ -7,7 +7,7 @@
 \usepackage{hyperref}
 \usetheme{Madrid}
 
-\title{Mini-Curso de \LaTeX\ \\ Aula 03 - Tabelas e Imagens}
+\title{Mini-Curso de \LaTeX\ \\ Aula 03 - Mais Formatação, Tabelas e Imagens}
 \author{Fábio Meneghetti \and Pedro Caetano}
 \date{4 de abril de 2016}
 
@@ -27,6 +27,31 @@
   \tableofcontents
 \end{frame}
 
+\begin{frame}[fragile]{Alinhamento do texto}
+  \section{Formatação (continuação)}
+  O alinhamento pode ser feito usando um ambiente, ou um comando (é recomendado que se use o ambiente).
+  \begin{center}
+    \begin{tabular}{ccc}
+    \textbf{Alinhamento} & \textbf{Ambiente} & \textbf{Comando}\\
+    À esquerda & flushleft & \verb+\raggedright+\\
+    À direita & flushright & \verb+\raggedleft+\\
+    Centralizado & center & \verb+\centering+\\
+    \end{tabular}
+  \end{center}
+\end{frame}
+
+\begin{frame}[fragile]{Comandos para o texto}
+  \begin{itemize}
+    \item \textit{itálico}: \verb+\textit{texto}+
+    \item \textbf{negrito}: \verb+\textbf{texto}+
+    \item \underline{sublinhado}: \verb+\underline{texto}+
+  \end{itemize}
+\end{frame}
+
+\begin{frame}[fragile]{Espaçamento}
+
+
+\end{frame}
 
 \begin{frame}
   \begin{center}
