--- a/Aula 1/aula1.tex
+++ b/Aula 1/aula1.tex
@@ -160,6 +160,17 @@
 \end{verbatim}
 \end{frame}
 
+\begin{frame}[fragile]{Buscando ajuda}
+  Às vezes acontecem erros estranhos durante a compilação, ou você não consegue se lembrar quais são as opções de algum pacote que você precisa, por exemplo. Neste caso, algumas fontes úteis de ajuda são
+  \begin{itemize}
+  \item o seu mecanismo de pesquisa favorito (DuckDuckGo, Google, ...),
+  \item o TeX Stack Exchange (\url{https://tex.stackexchange.com/}),
+  \item o site do Comprehensive \TeX\  Archive Network (\url{https://ctan.org/}), onde você pode provavelmente pode encontrar a documentação do pacote que está utilizando e\\
+  \item o wikibook do \LaTeX\ (\url{https://en.wikibooks.org/wiki/LaTeX}).
+  \end{itemize}
+  
+\end{frame}
+
 \begin{frame}
   \begin{center}
     \large Obrigado!\\
