--- a/Aula 3/aula3.tex
+++ b/Aula 3/aula3.tex
@@ -59,6 +59,10 @@
 
 \end{frame}
 
+\begin{frame}{Tabelas}
+  \section{Tabelas}
+\end{frame}
+
 \begin{frame}
   \begin{center}
     \large Obrigado!\\
