Apostila do Raniere

--- a/Aula 1/aula1.tex
+++ b/Aula 1/aula1.tex
@@ -157,10 +157,11 @@
 \begin{frame}[fragile]{Buscando ajuda}
   Às vezes acontecem erros estranhos durante a compilação, ou você não consegue se lembrar quais são as opções de algum pacote que você precisa, por exemplo. Neste caso, algumas fontes úteis de ajuda são
   \begin{itemize}
-  \item o seu mecanismo de pesquisa favorito (DuckDuckGo, Google, \ldots),
-  \item o TeX Stack Exchange (\url{https://tex.stackexchange.com/}),
+	\item a apostila do Rainere (na página do curso)
+  \item um mecanismo de pesquisa (DuckDuckGo, Google, etc)
+  \item o TeX Stack Exchange (\url{https://tex.stackexchange.com/})
   \item o site do Comprehensive \TeX\  Archive Network (\url{https://ctan.org/}), onde você pode provavelmente pode encontrar a documentação do pacote que está utilizando e\\
-  \item o wikibook do \LaTeX\ (\url{https://en.wikibooks.org/wiki/LaTeX}).
+  \item o Wikibook do \LaTeX\ (\url{https://en.wikibooks.org/wiki/LaTeX}).
   \end{itemize}
 
 \end{frame}
