Adicionei a explicação de corpo e cabeçalho

--- a/Aula 1/aula1.tex
+++ b/Aula 1/aula1.tex
@@ -98,6 +98,18 @@
   Mas primeiro, precisamos aprender alguns comandos básicos.
 \end{frame}
 
+\begin{frame}
+  Primeiramente, é bom saber que o código é dividido em duas partes: o \underline{cabeçalho} e o \underline{corpo} do documento.
+
+  \begin{itemize}
+  \item O cabeçalho dá informações sobre o documento e sobre sua forma, e não sobre o conteúdo em si.
+
+  \item O corpo é onde colocamos todo o conteúdo que queremos que seja exibido no documento.
+  \end{itemize}
+
+  Apresentaremos eles a seguir.
+\end{frame}
+
 \begin{frame}[fragile]
   \begin{center}\large
     \verb+\documentclass[...]{...}+
@@ -123,7 +135,7 @@
 
 \begin{frame}[fragile]
   \begin{center}\large
-    Ambiente \verb+document+
+    Ambiente \verb+document+ (este é o corpo)
   \end{center}
   É o ambiente dentro do qual todo o documento que você escreve se encontra!
   \begin{verbatim}
