--- a/Aula 3/aula3.tex
+++ b/Aula 3/aula3.tex
@@ -142,6 +142,12 @@
     \label{table:elegancia}
   \end{table}
   \end{verbatim}
+
+  \textbf{Dica:} Extensão do OpenOffice Calc2LaTeX
+\end{frame}
+
+\begin{frame}{Figuras}
+  \section{Figuras}
 \end{frame}
 
 \begin{frame}
