--- a/Aula 4/Exemplos/ex1.tex
+++ b/Aula 4/Exemplos/ex1.tex
@@ -4,7 +4,7 @@
 \usepackage{amsmath, amssymb, amsthm, amsfonts}
 
 \title{Algumas equações matemáticas}
-\author{Alexei Kostrikin}
+\author{John B. Fraleigh}
 \date{}
 
 \begin{document}
