--- a/Aula 4/aula4.tex
+++ b/Aula 4/aula4.tex
@@ -85,6 +85,17 @@
   \end{itemize}
 \end{frame}
 
+\begin{frame}[fragile]{O ambiente align}
+  \section{Align}
+  Às vezes você precisa escrever várias equações, uma em cima da outra, mas elas possuem cada uma um tamanho diferente, de tal forma que elas não vão ficar alinhadas. Uma solução é o ambiente matemático align, que alinha suas equações.
+  \\[5px]
+
+  Para alinhas as equações dentro de um ambiente align, basta separar o lado esquerdo e o direito com um \verb+&+, e usar um \verb+\\+ para terminar a linha.
+  \\[5px]
+
+  Dá também para usar vários \verb+&+ para fazer vários alinhamentos. Vamos ver o Exemplo 2!
+\end{frame}
+
 \begin{frame}
   \begin{center}
     \large Obrigado!\\
