--- a/Aula 3/aula3.tex
+++ b/Aula 3/aula3.tex
@@ -150,6 +150,15 @@
   \section{Figuras}
 \end{frame}
 
+\begin{frame}[fragile]{Listas}
+  \section{Listas}
+  \begin{itemize}
+    \item Existem dois ambientes para listas, o itemize e o enumerate. A diferença entre os dois é que o enumerate é numerado e o itemize não.
+    \item Dentro do ambiente, coloque o comando \verb+\item+ no começo de cada linha que você quer que seja um item
+    \item Ver Exemplo 2!
+  \end{itemize}
+\end{frame}
+
 \begin{frame}
   \begin{center}
     \large Obrigado!\\
