--- a/Aula 4/Exemplos/ex2.tex
+++ b/Aula 4/Exemplos/ex2.tex
@@ -3,39 +3,41 @@
 \usepackage[brazilian]{babel}
 \usepackage{amsmath, amssymb, amsthm, amsfonts}
 
-\title{Equações superalinhadas}
-\author{Alexei Kostrikin}
+\title{Matrizes matriciais}
+\author{Daniel J. Bernstein}
 \date{}
 
 \begin{document}
 
   \maketitle
 
-  Considere a função
+  Vamos escrever um sistema linear:
+
   \[
-    f(x) = a_1 f_1(x) + a_2 f_2(x) + a_3 f_3(x) + a_4 f_4(x),
+    \begin{pmatrix}
+      a_{11} & a_{12} & \cdots & a_{1n}\\
+      a_{21} & a_{22} & \cdots & a_{2n}\\
+      \vdots & \vdots & \ddots & \vdots\\
+      a_{n1} & a_{n2} & \cdots & a_{nn}
+    \end{pmatrix}
+    \begin{bmatrix}
+      x_1\\ x_2 \\ \vdots\\ x_n
+    \end{bmatrix}
+    =
+    \begin{bmatrix}
+      b_1 \\ b_2 \\ \vdots \\ b_n
+    \end{bmatrix}
   \]
-  onde
 
-  \begin{align}
-    a_1 &= \frac{pi^2}{2}\\
-    a_2 &= \int_0^5 \left( \sin\left(\frac{\pi}{2}\right) + \cos{\pi i} \right) dx\\
-    a_3 &= 1\\
-    a_4 &= e^{8\pi i}
-  \end{align}
-  e onde
+  Agora vamos escrever uma fórmula para o determinante de uma matriz quadrada $2 \times 2$:
 
-  % O ambiente align* não enumera as equações
-  \begin{align*}
-    f_1(x) &= x^2 + 1
-    & f_2(x) &= 1+2x+3x^3+4x^4+5x^5\\
-    f_3(x) &= \frac{pi}{e}x
-    & f_4(x) &= \alpha^{3\beta}
-  \end{align*}
-
-  Então obtemos que
-  \[
-    f(x) = 0 \iff f(x) = 1.
-  \]
+  \begin{equation}
+    \begin{vmatrix}
+      a_{11} & a_{12} \\
+      a_{21} & a_{22}
+    \end{vmatrix}
+    =
+    a_{11}a_{12} - a_{21}a_{12}
+  \end{equation}
 
 \end{document}
